--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,8 @@
     "ai": "^5.0.10",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
