--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.55.0",
     "ai": "^5.0.10",
     "next": "15.4.6",
     "react": "19.1.0",
